--- a/css/common.css
+++ b/css/common.css
@@ -19,6 +19,15 @@
   top: 25%;
   left: 10%;
 }
+#table-container {
+  height: calc(100% - 50px - 10% - 63px);
+  width: 90%;
+  position: relative;
+  display: inline-block;
+  vertical-align: middle;
+  top: 10%;
+  left: 5%;
+}
 #apiKey {
   background-image: url(https://mapzen.com/common/styleguide/images/key.svg);
   background-repeat: no-repeat;
@@ -41,5 +50,12 @@
   font-size: 2em;
   margin-right: 8px;
   vertical-align: middle;
+}
+.table-cell {
+  text-align: left;
+  margin-left: 7px;
+  margin-right: 7px;
+  margin-top: 4px;
+  margin-bottom: 4px;
 }
 html,body{margin: 0; padding: 0;}
