--- a/css/common.css
+++ b/css/common.css
@@ -58,4 +58,31 @@
   margin-top: 4px;
   margin-bottom: 4px;
 }
+.info {
+    padding: 6px 8px;
+    background: white;
+    background: rgba(255,255,255,0.8);
+    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    border-radius: 5px;
+    font-family: "Poppins", "Open Sans", Helvetica, Arial, sans-serif;
+    font-weight: 500;
+}
+.info h4 {
+    margin: 0 0 5px;
+    color: #777;
+}
+.legend {
+    line-height: 18px;
+    color: #555;
+}
+.legend img {
+    width: 18px;
+    height: 18px;
+    float: left;
+    padding: 4px;
+    opacity: 0.7;
+}
+.legend span {
+  margin-right: 4px;
+}
 html,body{margin: 0; padding: 0;}
