--- a/css/common.css
+++ b/css/common.css
@@ -86,6 +86,16 @@
   margin-right: 4px;
 }
 
+.enMoney::before {
+  content:"$";
+}
+
+.review-table {
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 #map-container {
   height: calc(100% - 100px - 63px);
   position: relative;
@@ -99,7 +109,6 @@
   text-align: center;
   display: inline-block;
   vertical-align: middle;
-  line-height: normal;
   line-height: 40px;
   background-color: #f8f8f8;
   width: 100%;
@@ -111,7 +120,7 @@
 }
 #progress-done {
   height: 10px;
-  width: 0%;
+  width: 0;
   background-color: #1e0e33;
   color: #f8f8f8;
 }
